--- a/src/pages/Settings/settings.css
+++ b/src/pages/Settings/settings.css
@@ -17,7 +17,6 @@
     flex-direction: column;
     padding: 1.5rem 1.5rem 2rem 1.5rem;
     position: relative;
-    position: relative;
   }
  
 
@@ -27,12 +26,12 @@
     align-items: center;
     width: 100%;
     background-color: var(--dark-bg);
-    height: 100%;
     gap: 2rem;
     padding: 2rem 1.5rem 2rem 0;
     border-radius: 2rem;
+    min-height: max-content;
   }
-  .slider {
+  .sidebar-wrapper {
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
@@ -41,7 +40,6 @@
     background-color: var(--dark-alt);
     max-width: 200px;
     width: 100%;
-    height: inherit;
     border-radius: 0 2rem 2rem 0;
     padding: 2rem 0.75rem;
   }
@@ -66,9 +64,7 @@
     color: var(--neutral-light);
     opacity: 0.8;
   }
-  /* .active-icon {
-    color: rgb(6, 19, 6);
-  } */
+ 
   
   .slider-btn:not(.active-tab):hover {
     background-color: var(--primary-color);
@@ -85,6 +81,7 @@
   }
   .theme-content-wrapper{
     width: 100%;
+
   }
   .theme-header {
     display: flex;
@@ -118,7 +115,7 @@
     color: var(--white);
     position: relative;
     z-index: 5;
-    padding: 0.5rem 1rem;
+    padding: .64rem 1rem;
     transition: 0.3s ease-in-out;
     gap: 0.5rem;
   }
@@ -131,7 +128,7 @@
     border: 1px solid var(--primary-color);
     opacity: 1;
     transition: 0.3s ease-in-out;
-    background-color: var(--dark-card-bg);
+    background-color: var(--dark-alt);
   }
   .color-icon-wrapper,
   .font-text-label {
